--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.2.6",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
+    "jwt-decode": "^2.2.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-dotenv": "^0.2.0",
